--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Backend Testbed",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "eslint --fix && node server.js",
     "dev": "nodemon server.js",
     "lint": "eslint --fix"
   },
@@ -17,6 +17,7 @@
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
     "mongodb": "^6.12.0",
+    "mongoose": "^8.10.0",
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
