--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Backend Testbed",
   "main": "server.js",
   "scripts": {
-    "start": "eslint --fix && node server.js",
+    "start": "node server.js",
     "dev": "nodemon server.js",
     "lint": "eslint --fix"
   },
