--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express-validator": "^7.2.1",
     "mongodb": "^6.12.0",
     "mongoose": "^8.10.0",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "swagger-autogen": "^2.23.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.18.0",
@@ -27,8 +28,7 @@
     "eslint-plugin-prettier": "^5.2.1",
     "globals": "^15.14.0",
     "nodemon": "^3.1.9",
-    "prettier": "^3.4.2",
-    "swagger-autogen": "^2.23.7"
+    "prettier": "^3.4.2"
   },
   "packageManager": "pnpm@9.15.3+sha512.1f79bc245a66eb0b07c5d4d83131240774642caaa86ef7d0434ab47c0d16f66b04e21e0c086eb61e62c77efc4d7f7ec071afad3796af64892fae66509173893a"
 }
