--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "express-validator": "^7.2.1",
     "mongodb": "^6.12.0",
     "mongoose": "^8.10.0",
-    "swagger-ui-express": "^5.0.1",
-    "swagger-autogen": "^2.23.7"
+    "mongoose-to-swagger": "^1.5.1",
+    "swagger-autogen": "^2.23.7",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.18.0",
