--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
+    "test": "jest",
     "lint": "eslint --fix"
   },
   "keywords": [],
@@ -16,6 +17,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
+    "mockingoose": "^2.16.2",
     "mongodb": "^6.12.0",
     "mongoose": "^8.10.0",
     "mongoose-to-swagger": "^1.5.1",
@@ -28,6 +30,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "globals": "^15.14.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.9",
     "prettier": "^3.4.2"
   },
