--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-session": "^1.18.1",
     "express-validator": "^7.2.1",
     "mockingoose": "^2.16.2",
     "mongodb": "^6.12.0",
     "mongoose": "^8.10.0",
     "mongoose-to-swagger": "^1.5.1",
+    "passport": "^0.7.0",
+    "passport-github2": "^0.1.12",
     "swagger-autogen": "^2.23.7",
     "swagger-ui-express": "^5.0.1"
   },
